--- a/ConsulExample/src/services/DataService/DataService.csproj
+++ b/ConsulExample/src/services/DataService/DataService.csproj
@@ -12,8 +12,10 @@
     <PackageReference Include="DnsClient" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ServiceDiscovery\ServiceDiscovery.csproj" />
+    <ProjectReference Include="..\..\..\..\IdentityServer\IdentityServer.csproj" />
   </ItemGroup>
 </Project>
