--- a/ConsulExample/src/services/DataService/appsettings.json
+++ b/ConsulExample/src/services/DataService/appsettings.json
@@ -10,11 +10,17 @@
     "HealthCheckTemplate": "/HealthCheck",
     "Endpoints": [],
     "Consul": {
-      "HttpEndpoint": "http://127.0.0.1:8500",
+      "HttpEndpoint": "http://localhost:8500",
       "DnsEndpoint": {
-        "Address": "127.0.0.1",
+        "Address": "localhost",
         "Port": 8600
       }
     }
+  },
+  "IdentityServerConfig": {
+    "ServerIP": "localhost",
+    "ServerPort": 5008,
+    "IdentityScheme": "Bearer",
+    "ResourceName": "DataService"
   }
 }
