--- a/ConsulExample/src/services/OrderService/Properties/launchSettings.json
+++ b/ConsulExample/src/services/OrderService/Properties/launchSettings.json
@@ -1,27 +1,10 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:34616",
-      "sslPort": 44351
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Ordering.API": {
+    "OrderService": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "/values",
+      "applicationUrl": "http://127.0.0.1:5900", //这里必须为Ip，不然服务发现会报错
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
