--- a/ConsulExample/src/services/OrderService/appsettings.json
+++ b/ConsulExample/src/services/OrderService/appsettings.json
@@ -1,20 +1,26 @@
-{
+﻿{
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ServiceDiscovery": {
-    "ServiceName": "Ordering Service",
+    "ServiceName": "OrderService",
     "HealthCheckTemplate": "/HealthCheck",
     "Endpoints": [],
     "Consul": {
       "HttpEndpoint": "http://localhost:8500",
       "DnsEndpoint": {
         "Address": "localhost",
-        "Port": 8700
+        "Port": 8600
       }
     }
+  },
+  "IdentityServerConfig": {
+    "ServerIP": "localhost",
+    "ServerPort": 5008,
+    "IdentityScheme": "Bearer",
+    "ResourceName": "OrderService"
   }
 }
