--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -4,5 +4,25 @@
       "Default": "Warning"
     }
   },
+  "SSOConfig": {
+    "ApiResources": [
+      {
+        "Name": "OrderService",
+        "DisplayName": "OrderService"
+      },
+      {
+        "Name": "DataService",
+        "DisplayName": "DataService"
+      }
+    ],
+    "Clients": [
+      {
+        "ClientId": "mark",
+        "ClientSecrets": [ "markjiang7m2" ],
+        "AllowedGrantTypes": "ClientCredentials",
+        "AllowedScopes": [ "OrderService", "DataService" ]
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
