--- a/ConsulExample/src/services/CatagoryService/appsettings.json
+++ b/ConsulExample/src/services/CatagoryService/appsettings.json
@@ -4,5 +4,17 @@
       "Default": "Warning"
     }
   },
+  "ServiceDiscovery": {
+    "ServiceName": "CatagoryService",
+    "HealthCheckTemplate": "/HealthCheck",
+    "Endpoints": [],
+    "Consul": {
+      "HttpEndpoint": "http://127.0.0.1:8500",
+      "DnsEndpoint": {
+        "Address": "localhost",
+        "Port": 8600
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
